# GIT4SW

./: .gitignore  GIT4SW.bat  README.md  README_ko.md  about.txt  commit.json  config.json.template  git_helper.py  git_provider.py  git_service.py  help.txt  help_en.md  help_en.txt  help_jp.md  help_ko.md  help_ko.txt  history.md  main.py  pyproject.toml  sw_bom_runner.py  sw_export_runner.py  sw_monitor.py  sw_service.py  sw_top_finder.py  todo.md  ui_tk.py
template/: README.md  _gitattributes  _gitignore
