[project]
name = "git4sw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "comtypes>=1.4.16",
    "gitpython>=3.1.43",
    "olefile>=0.47",
    "pillow>=12.2.0",
    "pygithub>=2.9.1",
    "pywin32>=306; sys_platform == 'win32'",
    "pandas",
    "openpyxl",
    "pyvis>=0.3.2",
]


